# xLib

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  CMakeLists.txt.off  CMakeLists_install.txt  ChangeLog.md  ChangeLog.sh  Config.cmake  DevInfo.sh  Install.sh  Install_FreeBSD.sh  Install_Linux.sh  Install_Unix.sh  Lib.mk  LibBuild_Unix.sh  LibInstall_Unix.sh  LibUninstall_Unix.sh  Lib_FreeBSD.sh  Lib_Linux.sh  Lib_Release.sh  Lib_Unix.sh  LibsBuild_Unix.sh  LibsBuild_Win.bat  LibsClean_Unix.sh  LibsInstall_Unix.sh  LibsUninstall_Unix.sh  README.md  Readme.md  Readme.txt  Roadmap.md  RunTests_FreeBSD.sh  RunTests_Linux.sh  RunTests_Unix.sh  SystemInfoEx.sh  TODO.md  TODO.txr  (+38 more)
Tests/: CMakeLists.txt  Test.cpp  Test_xLib.h
Tests/Algo/: Test_Algos.cpp
Tests/Common/: CxTest_CxArray.h  CxTest_CxAutoMallocT.h  CxTest_CxChar.h  CxTest_CxClipboard.h  CxTest_CxCom.h  CxTest_CxComPort.h  CxTest_CxConsole.h  CxTest_CxDateTime.h  CxTest_CxException.h  CxTest_CxFunctorT.h  CxTest_CxHandle.h  CxTest_CxHandleT.h  CxTest_CxLocale.h  CxTest_CxMacros.h  CxTest_CxShell.h  CxTest_CxString.h  CxTest_CxSystemInfo.h
Tests/Compress/: CxTest_CxGz.h
Tests/Core/: Test_Algos.cpp  Test_Algos.h  Test_Application.cpp  Test_Application.h  Test_ApplicationInfo.cpp  Test_ApplicationInfo.h  Test_Array.cpp  Test_Array.h  Test_AutoReset.cpp  Test_AutoReset.h  Test_Bitset.cpp  Test_Char.cpp  Test_Char.h  Test_CoreApplication.cpp  Test_DateTime.cpp  Test_DateTime.h  Test_Defines.cpp  Test_Defines.h  Test_Double.cpp  Test_Enum.cpp  Test_EnumArray.cpp  Test_Flags.cpp  Test_Float.cpp  Test_Format.cpp  Test_Format.h  Test_Handle.cpp  Test_HandleT.cpp  Test_HandleT.h  Test_Limits.cpp  Test_Limits.h  Test_Locale.cpp  Test_OStream.cpp  Test_Operators.cpp  Test_Operators.h  Test_StdStream.cpp  Test_StdStream.h  Test_String.cpp  Test_Type.cpp  Test_Units.cpp  Test_Units.h  (+3 more)
Tests/Crypt/: CxTest_CxBase64.h  CxTest_CxBlowfish.h  CxTest_CxCrc32.h  CxTest_CxRandom.h  Test_Base64.cpp  Test_Base64.h  Test_Blowfish.cpp  Test_Blowfish.h  Test_Crc32.cpp  Test_Crc32.h  Test_Guid.cpp  Test_Random.cpp  Test_Random.h
Tests/Db/: CxTest_CxConnectionString.h  CxTest_CxMySql.h  Test_MySql.cpp  Test_MySql.h
Tests/Debug/: CxTest_CxAutoProfiler.h  CxTest_CxDebugger.h  CxTest_CxLastError.h  CxTest_CxProfiler.h  CxTest_CxReport.h  Test_AutoProfiler.cpp  Test_AutoProfiler.h  Test_BuildInfo.cpp  Test_BuildInfo.h  Test_Debug.cpp  Test_Debugger.cpp  Test_ErrorReport.cpp  Test_ErrorReport.h  Test_Exception.cpp  Test_NativeError.cpp  Test_Profiler.cpp  Test_SourceInfo.cpp  Test_SourceInfo.h  Test_StackTrace.cpp  Test_StackTrace.h  Test_StdError.cpp  Test_StdError.h
Tests/Filesystem/: CxTest_CxDir.h  CxTest_CxDll.h  CxTest_CxDrive.h  CxTest_CxEnvironment.h  CxTest_CxFile.h  CxTest_CxFileAttribute.h  CxTest_CxIni.h  CxTest_CxMemoryIni.h  CxTest_CxPath.h  CxTest_CxStdioFile.h  CxTest_CxVolume.h  cxtest_cxfile.h
Tests/Fs/: Test_Archive.cpp  Test_Backup.cpp  Test_Config.cpp  Test_Dir.cpp  Test_DirTemp.cpp  Test_Dll.cpp  Test_File.cpp  Test_FileBin.cpp  Test_FileIO.cpp  Test_FileInfo.cpp  Test_FileTemp.cpp  Test_FileText.cpp  Test_FileType.cpp  Test_Finder.cpp  Test_FsWatcher.cpp  Test_Path.cpp  Test_PathDll.cpp  Test_PathExe.cpp  Test_Volume.cpp
Tests/Gui/: Test_MsgBox.cpp
Tests/IO/: Test_Backup.cpp  Test_Backup.h  Test_Config.cpp  Test_Config.h  Test_Dir.cpp  Test_Dll.cpp  Test_File.cpp  Test_File.h  Test_FileTemp.cpp  Test_FileType.cpp  Test_FileType.h  Test_Finder.cpp  Test_FsWatcher.cpp  Test_Path.cpp  Test_Volume.cpp  Test_Volume.h
Tests/Interface/: Test_IContainer.cpp  Test_IData.cpp
Tests/Log/: CxTest_CxFileLog.h  Test_AutoLog.cpp  Test_Cout.cpp  Test_FileLog.cpp  Test_FileLog.h  Test_SystemLog.cpp  Test_SystemLog.h  Test_Trace.cpp
Tests/Net/: CxTest_CxAsyncSocket.h  CxTest_CxCgi.h  CxTest_CxCookiePv0.h  CxTest_CxCookiePv1.h  CxTest_CxDnsClient.h  CxTest_CxGeoIp.h  CxTest_CxHttpClient.h  CxTest_CxMimeMessage.h  CxTest_CxPop3.h  CxTest_CxQueryList.h  CxTest_CxSmtp.h  CxTest_CxSocket.h  CxTest_CxSocketInit.h  CxTest_CxTcpClientSocket.h  CxTest_CxTcpServerSocket.h  CxTest_CxUri.h  CxTest_CxUrlCoder.h  Test_Cgi.cpp  Test_CookiePv0.cpp  Test_CookiePv0.h  Test_CookiePv1.cpp  Test_DnsClient.cpp  Test_HttpClient.cpp  Test_HttpClient.h  Test_MimeMessage.cpp  Test_MimeMessage.h  Test_Pop3Client.cpp  Test_Pop3Client.h  Test_SmtpClient.cpp  Test_SmtpClient.h  Test_Socket.cpp  Test_SocketInit.cpp  Test_SocketInit.h  Test_TcpClient.cpp  Test_TcpClient.h  Test_TcpServer.cpp  Test_TcpServer.h  Test_Uri.cpp  Test_Uri.h
Tests/PKCS11/: CxTest_CxPKCS11.h
Tests/Package/: CMakeLists.txt  Test_Application.cpp  Test_ApplicationInfo.cpp  Test_Archive.cpp  Test_Csv.cpp  Test_Csv.h  Test_CurlClient.cpp  Test_Donate.cpp  Test_Donate.h  Test_FeatureFlag.cpp  Test_GitClient.cpp  Test_IData.cpp  Test_IRestClient.cpp  Test_Iconv.cpp  Test_PrivaBankApi.cpp  Test_PrivatBankApi.cpp  Test_Translate.cpp  Test_Xml.cpp
Tests/Pattern/: Test_Observer.cpp  Test_Raii.cpp  Test_Singleton.cpp
Tests/Patterns/: CxTest_CxSingleton.h  Test_Observer.cpp  Test_Raii.cpp  Test_Raii.h  Test_Singleton.cpp  Test_Singleton.h
Tests/Source/: Test.cpp  main.cpp  main.cpp.disable  main.txt
Tests/Sync/: CWorkThread.h  CxTest_CxAtomicLongInt.h  CxTest_CxAutoCriticalSection.h  CxTest_CxAutoMutex.h  CxTest_CxCompletionPort.h  CxTest_CxCriticalSection.h  CxTest_CxEvent.h  CxTest_CxMutex.h  CxTest_CxProcess.h  CxTest_CxSemaphore.h  CxTest_CxSleeper.h  CxTest_CxThread.h  CxTest_CxTls.h  CxTest_CxWaitableTimer.h  Test_AtomicLongInt.cpp  Test_AtomicLongInt.h  Test_AutoIpcMutex.cpp  Test_AutoMutex.cpp  Test_Condition.cpp  Test_Condition.h  Test_Event.cpp  Test_Event.h  Test_IpcMutex.cpp  Test_IpcMutex.h  Test_IpcSemaphore.cpp  Test_IpcSemaphore.h  Test_Mutex.cpp  Test_Pipe.cpp  Test_Process.cpp  Test_Process.h  Test_Semaphore.cpp  Test_Semaphore.h  Test_Service.cpp  Test_Signal.cpp  Test_Signal.h  Test_Sleeper.cpp  Test_Sleeper.h  Test_Thread.cpp  Test_Thread.h  Test_ThreadCurrent.cpp  (+6 more)
Tests/System/: Test_CmdOptions.cpp  Test_Console.cpp  (+12 more)
(+3321 files in other folders)
